<resources>
    <string name="app_name">Submarine Remote</string>
    <string name="forward">Forward</string>
    <string name="reverse">Reverse</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="rc_submarine_v1">RC Submarine V1</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="frequency_500hz">Frequency: 500hz</string>
    <string name="stop">Stop</string>
</resources>
